fixed display bug overflowing text on mobile

--- a/sass/_media-queries.scss
+++ b/sass/_media-queries.scss
@@ -11,7 +11,7 @@
 
   p {
     padding: 5px;
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
 
 }
